<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="communicator"
            type="com.anokmik.databinding.communicator.CustomizationFragmentCommunicator" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/customization_one"
            android:textColor="@{communicator.state ? @color/colorAccent : @color/colorPrimary}" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/customization_two"
            android:textColor="@{communicator.state ? @color/colorPrimary : @color/colorAccent}" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/customization_three"
            android:textColor="@{communicator.state ? @color/colorAccent : @color/colorPrimary}" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_padding" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@{communicator.state ? @color/colorPrimary : @color/colorAccent}"
            android:text="@string/customization_another_color"
            android:textAllCaps="false"
            android:textColor="@{communicator.state ? @color/colorAccent : @color/colorPrimary}"
            bind:onClickListener="@{communicator.clickListener}" />

    </LinearLayout>

</layout>