<!--suppress AndroidUnknownAttribute -->
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.anokmik.databinding.communicator.LoginFragmentCommunicator" />

        <variable
            name="communicator"
            type="LoginFragmentCommunicator" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_login"
            android:inputType="text"
            android:onTextChanged="@{communicator.onLoginTextChanged}"
            android:text="@={communicator.loginValue}" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="@{communicator.isLoginValid}"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:onTextChanged="@{communicator.onPasswordTextChanged}" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="@{communicator.isLoginValid &amp; communicator.isPasswordValid}"
            android:onClick="@{() -> communicator.showToast()}"
            android:text="@string/button_sign_in" />

    </LinearLayout>

</layout>